--- a/style.css
+++ b/style.css
@@ -19,10 +19,13 @@
 }
 
 .added {
-    border: 2px solid #1e1743;
+    border: 2px solid gold;
     border-radius: 5px;
 }
-
+#selected {
+    color: red;
+    font-weight: 700;
+}
 img {
     height: 400px;
     object-fit: cover;
